@@ -1,2 +1,0 @@
-#!/bin/sh
-grep EZTHUMB_VERSION ezthumb.h | cut -d\" -f 2
